# fivem_dev_tools

./: .gitignore  README.md  package.json  svelte.config.js
.github/workflows/: build.yml
src/: app.html  codewalkercli.svelte.ts  diffEditor.svelte.ts  settings.svelte.ts  toast.svelte.ts  updater.svelte.ts  xml.svelte.ts
src-codewalker/CodeWalkerLib/: CodeWalkerCli.csproj  CodeWalkerCli.sln  Commands.cs  ConsoleUtils.cs  FileProcessor.cs  InputHandler.cs  Program.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: codewalkercli.rs  files.rs  vector.rs
src/core/: codewalkercli.svelte.ts  settings.svelte.ts  toast.svelte.ts
src/lib/components/: Cli.svelte  FileNode.svelte  FolderNode.svelte  Navigation.svelte  Toast.svelte  Updater.svelte
src/lib/model_viewer/: drawable.ts  modelview.svelte.ts  scene.svelte.ts  xmlloader.ts  yftloader.ts  ymap.ts
src/lib/viewers/diff/: diffEditor.svelte.ts
src/routes/: +layout.svelte
src/routes/closest_vector/: +page.svelte
src/routes/diff_editor/: +page.svelte
src/routes/duplicate_files/: +page.svelte
src/routes/model_viewer/: +page.svelte
src/routes/popgroups_editor/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/xml_editor/: +page.svelte
src/types/: types.ts
static/css/: reset.css  styles.css
