[package]
name = "fivem_dev_tools"
version = "0.1.3"
description = "Dev Tools for FiveM"
authors = ["Zero"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fivem_dev_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
rayon = "1.10.0"
once_cell = "1.20.3"
walkdir = "2.5.0"
dashmap = "6.1.0"
tauri-plugin-dialog = "2"
tauri-plugin-core = "2.0.0-beta.0"
tauri-plugin-store = "2"
rlua = "0.20.1"
tokio = "1.44.0"
tauri-plugin-shell = "2"
thiserror = "2.0.12"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.6.0"
